add esplanade case study

--- a/static/style/scss/base.scss
+++ b/static/style/scss/base.scss
@@ -38,7 +38,7 @@ section {
 }
 
 mark {
-    background-image: linear-gradient(#7ef6e7, #81f1e7);
+    background-image: linear-gradient(rgba(234,35,64,0.3), rgba(234,35,64, 0.5));
     background-size: 100% 34%;
     background-repeat: no-repeat;
     background-position: 0 bottom;
@@ -116,43 +116,23 @@ h6 {
 .h1,
 h1 {
 	font-size: $px-h1-font;
-	@include down-md {
-		font-size: $px-h1-font - 10px;
-	}
-	@include down-sm {
-		font-size: $px-h1-font - 15px;
-	}
 }
 .h2,
 h2 {
 	font-size: $px-h2-font;
-	@include down-md {
-		font-size: $px-h2-font - 8px;
-	}
-	@include down-sm {
-		font-size: $px-h2-font - 12px;
-	}
 }
 .h3,
 h3 {
 	font-size: $px-h3-font;
-	@include down-md {
-		font-size: $px-h3-font - 4px;
-	}
-	@include down-sm {
-		font-size: $px-h3-font - 8px;
-	}
 }
 .h4,
 h4 {
 	font-size: $px-h4-font;
-	@include down-sm {
-		font-size: $px-h4-font - 4px;
-	}
 }
 .h5,
 h5 {
 	font-size: $px-h5-font;
+	font-weight: bold;
 }
 .h6,
 h6 {
