--- a/static/style/master.scss
+++ b/static/style/master.scss
@@ -31,6 +31,7 @@ Table of contents
 
 @import "scss/variable";
 @import "scss/mixin";
+@import "scss/animation.scss";
 @import "scss/button";
 @import "scss/base";
 @import "scss/color";
