--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -1,32 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow:400,400i,700|Baskervville&display=swap');
-
+// @import url('https://fonts.googleapis.com/css?family=Barlow:400,400i,700|Baskervville&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700|Raleway:400,700&display=swap');
 
 
 // Color system
-$px-theme:						#ef8354 !default; // Main theme
-$px-body-color:					#2d3142 !default; // Body text color
+$px-theme:                      #ea2340;
+$px-body-color:                 #1c1d24;
 
 $px-black:						#000000 !default; 
 $px-white:						#ffffff !default;
-$px-dark:						#2d3142 !default;
-$px-medium-dark:				#4f5d75 !default;
-$px-gray:						#bfc0c0 !default;
+$px-dark:						#1c1d24 !default;
+$px-medium-dark:				#807C78 !default;
+$px-gray:						#f5eee6 !default;
 $px-light-gray:					#eee !default;
 
 
 // Font
-$px-base-font:					15px !default;
-$px-h1-font:                	50px !default;
-$px-h2-font:                	44px !default;
-$px-h3-font:                	32px !default;
-$px-h4-font:                	26px !default;
-$px-h5-font:                	20px !default;
-$px-h6-font:                	18px !default;
+$px-base-font:					1rem !default;
+$px-h1-font:                	3.5rem !default;
+$px-h2-font:                	2.5rem !default;
+$px-h3-font:                	2rem !default;
+$px-h4-font:                	1.6rem !default;
+$px-h5-font:                	1rem !default;
+$px-h6-font:                	1rem !default;
 
-$px-font-family:				'Barlow', sans-serif; // Main Font Family
-$px-font-alt:					'Barlow', sans-serif; // Main Font Family
+$px-font-family:				'Lato', sans-serif; // Main Font Family
+$px-font-alt:					'Lato', sans-serif; // Main Font Family
 
-$px-heading-font-family:         'Baskervville', serif; // Heading Font Family
+$px-heading-font-family:         'Raleway', sans-serif; // Heading Font Family
 
 // Breakpoints
 $px-media-xsm:					567px !default;
