update homepage and esplanade case study

--- a/static/style/scss/base.scss
+++ b/static/style/scss/base.scss
@@ -5,7 +5,7 @@ body {
 	font-family: $px-font-family;
 	font-size: $px-base-font;
 	color: $px-body-color;
-	font-weight: 400;
+	font-weight: 300;
 	line-height: 1.6;
 	font-smoothing: antialiased;
 }
@@ -103,43 +103,47 @@ h1,
 .h2,
 h2,
 .h3,
-h3,
-.h4,
-h4,
-.h5,
-h5,
-.h6,
-h6 {
+h3 {
 	font-family: $px-heading-font-family;
 }
 
 .h1,
 h1 {
 	font-size: $px-h1-font;
+	margin-top: 3rem;
 }
 .h2,
 h2 {
 	font-size: $px-h2-font;
+	margin-top: 3rem;
 }
 .h3,
 h3 {
 	font-size: $px-h3-font;
+	margin-top: 3rem;
 }
 .h4,
 h4 {
 	font-size: $px-h4-font;
+	margin-top: 2rem;
 }
 .h5,
 h5 {
 	font-size: $px-h5-font;
-	font-weight: bold;
+	font-weight: 400;
+	margin-top: 1rem;
+	margin-bottom: .5rem;
 }
 .h6,
 h6 {
 	font-size: $px-h6-font;
+	margin-top: 1rem;
+	text-transform: uppercase;
 }
 
-
+.display-1 {
+	font-size: $px-h2-font;
+}
 
 /* ----------------------
 *	owl 
