--- a/static/style/scss/common.scss
+++ b/static/style/scss/common.scss
@@ -26,17 +26,6 @@
 
 
 /* ----------------------
-*	Section
--------------------------*/
-.container-large {
-	max-width: 1440px;
-}
-.container-small {
-	max-width: 750px;
-}
-
-
-/* ----------------------
 *	Box shadow
 ---------------------------*/
 .box-shadow-lg {
@@ -158,56 +147,12 @@
 
 /* Height Width
 --------------------*/
-@for $i from 1 through 20 {
-	.w-#{$i * 5}px {
-		width: #{$i * 5}px;
-	}
-}
-
-@for $i from 3 through 20 {
-	.w-#{$i * 50}px {
-		width: #{$i * 50}px;
-	}
-}
 .max-w-100 {
 	max-width: 100%;
 }
 
-.min-h-350px {
-	min-height: 350px;
-}
-.min-h-50vw {
-	min-height: 65vh;
-}
-
 .full-screen {
 	min-height: 100vh;
-}
-.screen-85 {
-	min-height: 85vh;
-}
-.screen-65 {
-	min-height: 65vh;
-}
-@include down-sm {
-	.sm-full-screen-auto {
-		min-height: auto;
-	}
-}
-
-.max-width-auto {
-	max-width: none;
-	@include down-md {
-		max-width: 100%;
-	}
-}
-
-/* Font wight
---------------------*/
-@for $i from 1 through 9 {
-	.font-w-#{$i * 100} {
-		font-weight: #{$i * 100}
-	}
 }
 
 // Margin Padding mixin
@@ -225,80 +170,80 @@ $mp-position: (
 	@for $i from 0 through 20 {
 		@each $n-name, $n-value in $mp-name {
 			@if $brksize == normal{
-				.#{$n-name}-#{$i*5}px{
-					#{$n-value}: #{$i*5}px;
+				.#{$n-name}-#{$i*.5}rem{
+					#{$n-value}: #{$i*.5}rem;
 				}
-				.#{$n-name}-#{$i*5}px-tb{
-					#{$n-value}-top: #{$i*5}px;
-					#{$n-value}-bottom: #{$i*5}px;
+				.#{$n-name}-#{$i*.5}rem-tb{
+					#{$n-value}-top: #{$i*.5}rem;
+					#{$n-value}-bottom: #{$i*.5}rem;
 				}
-				.#{$n-name}-#{$i*5}px-lr{
-					#{$n-value}-left: #{$i*5}px;
-					#{$n-value}-right: #{$i*5}px;
+				.#{$n-name}-#{$i*.5}rem-lr{
+					#{$n-value}-left: #{$i*.5}rem;
+					#{$n-value}-right: #{$i*.5}rem;
 				}
 			}
 
 			@if $brksize == sm{
-				.sm-#{$n-name}-#{$i*5}px{
-					#{$n-value}: #{$i*5}px;
+				.sm-#{$n-name}-#{$i*.5}rem{
+					#{$n-value}: #{$i*.5}rem;
 				}
-				.sm-#{$n-name}-#{$i*5}px-tb{
-					#{$n-value}-top: #{$i*5}px;
-					#{$n-value}-bottom: #{$i*5}px;
+				.sm-#{$n-name}-#{$i*.5}rem-tb{
+					#{$n-value}-top: #{$i*.5}rem;
+					#{$n-value}-bottom: #{$i*.5}rem;
 				}
-				.sm-#{$n-name}-#{$i*5}px-lr{
-					#{$n-value}-left: #{$i*5}px;
-					#{$n-value}-right: #{$i*5}px;
+				.sm-#{$n-name}-#{$i*.5}rem-lr{
+					#{$n-value}-left: #{$i*.5}rem;
+					#{$n-value}-right: #{$i*.5}rem;
 				}
 			}
 
 			@if $brksize == md{
-				.md-#{$n-name}-#{$i*5}px{
-					#{$n-value}: #{$i*5}px;
+				.md-#{$n-name}-#{$i*.5}rem{
+					#{$n-value}: #{$i*.5}rem;
 				}
-				.md-#{$n-name}-#{$i*5}px-tb{
-					#{$n-value}-top: #{$i*5}px;
-					#{$n-value}-bottom: #{$i*5}px;
+				.md-#{$n-name}-#{$i*.5}rem-tb{
+					#{$n-value}-top: #{$i*.5}rem;
+					#{$n-value}-bottom: #{$i*.5}rem;
 				}
-				.md-#{$n-name}-#{$i*5}px-lr{
-					#{$n-value}-left: #{$i*5}px;
-					#{$n-value}-right: #{$i*5}px;
+				.md-#{$n-name}-#{$i*.5}rem-lr{
+					#{$n-value}-left: #{$i*.5}rem;
+					#{$n-value}-right: #{$i*.5}rem;
 				}
 			}
 
 			@if $brksize == lg{
-				.lg-#{$n-name}-#{$i*5}px{
-					#{$n-value}: #{$i*5}px;
+				.lg-#{$n-name}-#{$i*.5}rem{
+					#{$n-value}: #{$i*.5}rem;
 				}
-				.lg-#{$n-name}-#{$i*5}px-tb{
-					#{$n-value}-top: #{$i*5}px;
-					#{$n-value}-bottom: #{$i*5}px;
+				.lg-#{$n-name}-#{$i*.5}rem-tb{
+					#{$n-value}-top: #{$i*.5}rem;
+					#{$n-value}-bottom: #{$i*.5}rem;
 				}
-				.lg-#{$n-name}-#{$i*5}px-lr{
-					#{$n-value}-left: #{$i*5}px;
-					#{$n-value}-right: #{$i*5}px;
+				.lg-#{$n-name}-#{$i*.5}rem-lr{
+					#{$n-value}-left: #{$i*.5}rem;
+					#{$n-value}-right: #{$i*.5}rem;
 				}
 			}
 
 			@each $p-name, $p-value in $mp-position {
 				@if $brksize == normal{
-					.#{$n-name}-#{$i*5}px-#{$p-name}{
-						#{$n-value}-#{$p-value}: #{$i*5}px;
+					.#{$n-name}-#{$i*.5}rem-#{$p-name}{
+						#{$n-value}-#{$p-value}: #{$i*.5}rem;
 					}
 				}
 				@if $brksize == sm {
-					.sm-#{$n-name}-#{$i*5}px-#{$p-name}{
-						#{$n-value}-#{$p-value}: #{$i*5}px;
+					.sm-#{$n-name}-#{$i*.5}rem-#{$p-name}{
+						#{$n-value}-#{$p-value}: #{$i*.5}rem;
 					}	
 				}
 				@if $brksize == md {
-					.md-#{$n-name}-#{$i*5}px-#{$p-name}{
-						#{$n-value}-#{$p-value}: #{$i*5}px;
+					.md-#{$n-name}-#{$i*.5}rem-#{$p-name}{
+						#{$n-value}-#{$p-value}: #{$i*.5}rem;
 					}	
 				}
 				@if $brksize == lg {
-					.lg-#{$n-name}-#{$i*5}px-#{$p-name}{
-						#{$n-value}-#{$p-value}: #{$i*5}px;
+					.lg-#{$n-name}-#{$i*.5}rem-#{$p-name}{
+						#{$n-value}-#{$p-value}: #{$i*.5}rem;
 					}
 				}
 			}
