--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -153,234 +153,6 @@
 }
 
 
-/* Resume
---------------------------------*/
-.resume-box {
-	padding: 30px 15px;
-	.row {
-		+ .row {
-		    border-top: 1px solid #eee;
-		    margin-top: 20px;
-		    padding-top: 20px;
-		}
-	}
-	p {
-		margin: 0;
-	}
-	h6 {
-		color: $px-dark;
-		margin: 0;
-	}
-	small {
-		padding-bottom: 10px;
-		width: 100%;
-		display: inline-block;
-		vertical-align: top;
-	}
-	.yr {
-	    width: 100%;
-	    text-align: right;
-	    position: relative;
-	    padding: 0 20px 0 0px;
-	    height: 100%;
-		color: $px-theme;
-		&:after {
-		    content: "";
-		    position: absolute;
-		    top: 5px;
-		    right: -10px;
-		    width: 12px;
-		    height: 12px;
-		    border-radius: 50%;
-		    background: currentColor;
-		    border: 2px solid $px-dark;
-		}
-		&:before {
-		    content: "";
-		    position: absolute;
-		    top: 10px;
-		    bottom: 0;
-		    right: -4px;
-		    width: 1px;
-		    background: #eee;
-		}
-	}
-}
-
-/* Testimonials
---------------------------------*/
-.testimonial-col-01 {
-    padding: 50px 20px 30px;
-    border: 1px solid #eee;
-    margin: 15px 10px 30px 10px;
-    position: relative;
-    text-align: center;
-    background: $px-white;
-    border-radius: 5px;
-    .tc-info {
-    	margin: 20px 0 0;
-    	h5 {
-		    margin: 0;
-		    padding: 0 0 4px;
-		    font-size: 18px;
-		    font-weight: 600;
-		    color: $px-dark;
-    	}
-    	label {
-    		font-weight: normal;
-    		margin: 0;
-    	}
-    }
-	p {
-		margin: 0;
-		font-size: 16px;
-	}
-	.img {
-	    width: 100px;
-	    height: 100px;
-	    display: inline-block;
-	    border-radius: 50%;
-	    overflow: hidden;
-	    margin: 0 0 20px;
-	}
-}
-
-/* Blog
---------------------------------*/
-.blog-grid {
-	.blog-grid-img {
-		overflow: hidden;
-		img {
-			@include transition(ease all 0.85s);
-			@include scale(1);
-		}
-	}
-	.blog-gird-info {
-	    padding: 15px 0 0;
-	}
-	h5 {
-	    margin: 0;
-	    padding: 10px 0 15px;
-	    font-size: 22px;
-	    font-weight: 600;
-		color: $px-dark;
-		a {
-			color: $px-dark;
-			&:hover {
-				color: $px-theme;
-			}
-		}
-	}
-	p {
-		margin: 0;
-		font-size: 15px;
-	}
-	.b-meta {
-		span {
-			font-size: 12px;
-			color: $px-body-color;
-			line-height: 15px;
-		}
-		.meta {
-	        display: inline-block;
-		    border-left: 1px solid #ddd;
-		    line-height: 15px;
-		    margin: 0 0 0 6px;
-		    padding: 0 0 0px 6px;
-		}
-	}
-	.btn-grid {
-		margin-top: 15px;
-	}
-	&:hover {
-		.blog-grid-img {
-			img {
-				@include scale(1.1);
-			}
-		}	
-	}
-}
-
-/* Portfolio
---------------------------------*/
-.portfolio-content {
-	&.grid-col-2 {
-		.grid-item {
-			width: 50%;
-			@include down-xsm {
-				width: 100%;
-			}
-		}
-	}
-	&.grid-col-3 {
-		.grid-item {
-			@include up-sm {
-				width: 33.3333%;
-			}
-			@include down-sm {
-				width: 50%;
-			}
-			@include down-xsm {
-				width: 100%;
-			}
-		}
-	}
-	&.grid-col-4 {
-		.grid-item {
-			@include up-sm {
-				width: 33.3333%;
-			}
-			@include up-md {
-				width: 25%;
-			}
-			@include down-sm {
-				width: 50%;
-			}
-			@include down-xsm {
-				width: 100%;
-			}
-		}
-	}
-
-	&.grid-col-5 {
-		.grid-item {
-			@include up-sm {
-				width: 33.3333%;
-			}
-			@include up-md {
-				width: 20%;
-			}
-			@include down-sm {
-				width: 50%;
-			}
-			@include down-xsm {
-				width: 100%;
-			}
-		}
-	}
-
-	&.grid-gutter-md {
-		margin-left: -8px;
-		margin-right: -8px;
-		.grid-item {
-			padding: 8px;
-		}
-	}
-	&.grid-gutter-lg {
-		margin-left: -12px;
-		margin-right: -12px;
-		.grid-item {
-			padding: 12px;
-		}
-	}
-
-	.grid-item {
-		float: left;
-	}
-	
-}
-
-
 /*Galletry*/
 .gallery-box {
 	position: relative;
@@ -460,88 +232,35 @@
 
 /*Portfolio Style 1*/
 .portfolio-box-01 {
-	position: relative;
+	height: 100%;
 	overflow: hidden;
 	.portfolio-info {
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		right: 0px;
-		bottom: 0px;
-		background: rgba($px-dark, 0.4);
-		@include transition(ease all 0.55s);
-		opacity: 0;
-	}
-	.gallery-link {
-		display: inline-block;
-		vertical-align: middle;
-		width: 70px;
-		height: 70px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		position: absolute;
 		top: 0;
+		left: 15px;
+		right: 15px;
 		bottom: 0;
-		left: 0;
-		right: 0;
-		margin: auto;
-		
-		i {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			margin: auto;
-			@include transition(ease-in-out all 0.35s);
-			width: 0px;
-			height: 0px;
-			&:after,
-			&:before {
-				content:"";
-				position: absolute;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
-				margin: auto;
-				background: #fff;
-			}
-			&:after {
-				width: 1px;
-				height: 100%;
-			}
-			&:before {
-				height: 1px;
-				width: 100%;
-			}
+		background: rgba($px-dark, 0.7);
+		@include transition(ease all 0.55s);
+		opacity: 0;
+		a {
+			color: white;
+			text-align: center;
 		}
 	}
-	h5 {
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		background: $px-theme;
-        font-size: 16px;
-        padding: 20px;
-	    margin: 0;
-	    font-weight: 500;
-	    text-align: center;
-		a {
-			color: $px-white;
-		    text-decoration: none;
-		    font-weight: 600;
-		}
+
+	.portfolio-img {
+		display: flex;
+		max-width: 100%;
+		height: 100%;
 	}
 	&:hover {
 		.portfolio-info {
 			position: absolute;
 			opacity: 1;
-		}	
-		.gallery-link {
-			i {
-				width: 100%;
-				height: 100%;
-			}
 		}
 	}
 }
@@ -696,4 +415,29 @@
 .quotes {
 	padding-left: 35px;
 	border-left: 5px solid $px-dark;
+}
+
+.icon {
+	display: inline-block;
+    width: 2em;
+	height: 2em;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+}
+
+.bullet-icon {
+	margin: 3rem 0 1rem;
+}
+
+/* ----- Esplanade --- */
+
+// TODO: add break point 
+
+#esplanade_project_overview {
+	background-image: url('../img/esplanade_bg_sm.png');
+	background-size: cover;
+	@media (min-width: 576px) {
+		background-image: url('../img/esplanade_bg.png');
+	}
 }
