--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -1,6 +1,4 @@
-// @import url('https://fonts.googleapis.com/css?family=Barlow:400,400i,700|Baskervville&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700|Raleway:400,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato:300,300i,400,700&display=swap');
 
 // Color system
 $px-theme:                      #ea2340;
@@ -21,12 +19,12 @@ $px-h2-font:                	2.5rem !default;
 $px-h3-font:                	2rem !default;
 $px-h4-font:                	1.6rem !default;
 $px-h5-font:                	1rem !default;
-$px-h6-font:                	1rem !default;
+$px-h6-font:                	.75rem !default;
 
 $px-font-family:				'Lato', sans-serif; // Main Font Family
 $px-font-alt:					'Lato', sans-serif; // Main Font Family
 
-$px-heading-font-family:         'Raleway', sans-serif; // Heading Font Family
+$px-heading-font-family:         'Fredericka the Great', serif; // Heading Font Family
 
 // Breakpoints
 $px-media-xsm:					567px !default;
