--- a/static/style/variable.css
+++ b/static/style/variable.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700|Raleway:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato:300,300i,400,700&display=swap");
