--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato:300,300i,400,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,300i,400,700&display=swap');
 // Color system
 $px-theme:                      #ea2340;
 $px-body-color:                 #1c1d24;
@@ -24,7 +23,7 @@ $px-h6-font:                	.75rem !default;
 $px-font-family:				'Lato', sans-serif; // Main Font Family
 $px-font-alt:					'Lato', sans-serif; // Main Font Family
 
-$px-heading-font-family:         'Fredericka the Great', serif; // Heading Font Family
+$px-heading-font-family:         'Abril Fatface', serif; // Heading Font Family
 
 // Breakpoints
 $px-media-xsm:					567px !default;
