--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -450,6 +450,23 @@
 	}
 }
 
-.fade_in {
-	opacity: 0;
+#home_brand_statement {
+	position: relative;
+	height: 100vh;
+	overflow: hidden;
+
+	.container {
+		position: absolute;
+		z-index: 2;
+	}
+	.circles{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: calc(100vh + 128px);
+		overflow: hidden;
+		z-index: 1;
+	}
+
 }
