--- a/static/style/scss/animation.scss
+++ b/static/style/scss/animation.scss
@@ -54,6 +54,14 @@
     }
   }
   
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100vh + 128px);
+  overflow: hidden;
+} 
     
 .circles li{
 position: absolute;
