change theme color

--- a/static/style/scss/animation.scss
+++ b/static/style/scss/animation.scss
@@ -69,7 +69,7 @@ display: block;
 list-style: none;
 width: 20px;
 height: 20px;
-background: rgba(234, 35, 64, 0.2);
+background: #97e5ef;
 animation: animate 25s linear infinite;
 bottom: -150px;
 }
