--- a/static/style/scss/button.scss
+++ b/static/style/scss/button.scss
@@ -186,7 +186,7 @@
 			border: 1px solid $px-dark;
 			color: $px-white;
 			&:hover {
-				background: transparent;
+				background: $px-medium-dark;
 				color: $px-dark;
 			}
 		}
