--- a/static/style/scss/header.scss
+++ b/static/style/scss/header.scss
@@ -50,6 +50,7 @@
 		align-items: center;
 		color: $px-dark;
 		font-size: 1.25rem;
+		font-weight: 400;
 		font-family: $px-heading-font-family;
 		img {
 			height: 1.25rem;
