--- a/static/style/master.css
+++ b/static/style/master.css
@@ -28,7 +28,7 @@ Table of contents
 24) list
 25) space
 */
-@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,300i,400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|IBM+Plex+Serif:300,300i,500&display=swap");
 .shake-vertical {
   display: block;
   -webkit-animation: shake-vertical 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 4s both;
@@ -88,7 +88,7 @@ Table of contents
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(234, 35, 64, 0.2);
+  background: #97e5ef;
   animation: animate 25s linear infinite;
   bottom: -150px; }
 
@@ -177,10 +177,10 @@ Table of contents
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
-  color: #ea2340;
+  color: #97e5ef;
   border-bottom: 2px solid currentColor; }
   .m-btn-link:hover {
-    color: #1c1d24;
+    color: #0b0b0a;
     cursor: pointer; }
 
 .m-btn {
@@ -216,63 +216,63 @@ Table of contents
     padding: 15px 40px;
     line-height: 25px; }
   .m-btn.m-btn-theme {
-    background: #ea2340;
+    background: #97e5ef;
     color: #ffffff;
-    border-color: #ea2340;
+    border-color: #97e5ef;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-theme:hover {
-      background: #1c1d24;
-      border-color: #1c1d24;
-      box-shadow: 0px 15px 20px rgba(234, 35, 64, 0.4); }
+      background: #0b0b0a;
+      border-color: #0b0b0a;
+      box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-t-theme {
     background: transparent;
-    color: #ea2340;
-    border-color: #ea2340;
+    color: #97e5ef;
+    border-color: #97e5ef;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-t-theme:hover {
-      background: #ea2340;
-      border-color: #ea2340;
+      background: #97e5ef;
+      border-color: #97e5ef;
       color: #ffffff;
-      box-shadow: 0px 15px 20px rgba(234, 35, 64, 0.4); }
+      box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-dark {
-    background: #1c1d24;
+    background: #0b0b0a;
     color: #ffffff;
-    border-color: #1c1d24;
-    box-shadow: 0px 8px 15px rgba(28, 29, 36, 0.1); }
+    border-color: #0b0b0a;
+    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
     .m-btn.m-btn-dark:hover {
-      background: #ea2340;
-      border-color: #ea2340;
-      box-shadow: 0px 15px 20px rgba(234, 35, 64, 0.4); }
+      background: #97e5ef;
+      border-color: #97e5ef;
+      box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-t-dark {
     background: transparent;
-    color: #1c1d24;
-    border-color: #1c1d24;
+    color: #0b0b0a;
+    border-color: #0b0b0a;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-t-dark:hover {
-      background: #1c1d24;
-      border-color: #1c1d24;
+      background: #0b0b0a;
+      border-color: #0b0b0a;
       color: #ffffff;
-      box-shadow: 0px 15px 20px rgba(28, 29, 36, 0.4); }
+      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
   .m-btn.m-btn-white {
     background: #ffffff;
-    color: #ea2340;
+    color: #97e5ef;
     border-color: #ffffff;
-    box-shadow: 0px 8px 15px rgba(28, 29, 36, 0.1); }
+    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
     .m-btn.m-btn-white:hover {
       background: transparent;
       border-color: #ffffff;
       color: #ffffff;
-      box-shadow: 0px 15px 20px rgba(28, 29, 36, 0.4); }
+      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
   .m-btn.m-btn-t-white {
     background: transparent;
     color: #ffffff;
     border-color: #ffffff;
-    box-shadow: 0px 8px 15px rgba(28, 29, 36, 0.1); }
+    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
     .m-btn.m-btn-t-white:hover {
       background: #ffffff;
       border-color: #ffffff;
-      color: #1c1d24;
-      box-shadow: 0px 15px 20px rgba(28, 29, 36, 0.4); }
+      color: #0b0b0a;
+      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
 
 /* Icon
 ----------------*/
@@ -301,15 +301,15 @@ Table of contents
   font-size: 15px; }
 
 .social-icon.si-theme a {
-  background: #ea2340; }
+  background: #97e5ef; }
   .social-icon.si-theme a:hover {
-    background: #1c1d24;
+    background: #0b0b0a;
     color: #ffffff; }
 
 .social-icon.si-white a {
   background: #ffffff;
   border: 1px solid #ffffff;
-  color: #1c1d24; }
+  color: #0b0b0a; }
   .social-icon.si-white a:hover {
     background: transparent;
     color: #ffffff; }
@@ -320,15 +320,15 @@ Table of contents
   color: #ffffff; }
   .social-icon.si-t-white a:hover {
     background: #ffffff;
-    color: #1c1d24; }
+    color: #0b0b0a; }
 
 .social-icon.si-dark a {
-  background: #1c1d24;
-  border: 1px solid #1c1d24;
+  background: #0b0b0a;
+  border: 1px solid #0b0b0a;
   color: #ffffff; }
   .social-icon.si-dark a:hover {
-    background: transparent;
-    color: #1c1d24; }
+    background: #4A4B48;
+    color: #0b0b0a; }
 
 .social-icon.si-text a {
   color: #929daf; }
@@ -379,11 +379,11 @@ Table of contents
     .video-btn.white:after {
       background: #ffffff; }
     .video-btn.white span {
-      color: #ea2340; }
+      color: #97e5ef; }
   .video-btn.theme {
-    background: #ea2340; }
+    background: #97e5ef; }
     .video-btn.theme:after {
-      background: #ea2340; }
+      background: #97e5ef; }
     .video-btn.theme span {
       color: #ffffff; }
   .video-btn span {
@@ -419,9 +419,9 @@ Table of contents
 *	General
 ------------------------*/
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "IBM Plex Serif", sans-serif;
   font-size: 1rem;
-  color: #1c1d24;
+  color: #0b0b0a;
   font-weight: 300;
   line-height: 1.6;
   font-smoothing: antialiased; }
@@ -430,9 +430,9 @@ html {
   overflow-x: hidden; }
 
 a {
-  color: #ea2340; }
+  color: #97e5ef; }
   a:hover {
-    color: #d0142f;
+    color: #74dcea;
     text-decoration: none;
     cursor: pointer; }
 
@@ -467,7 +467,7 @@ mark {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #ea2340;
+  background: #97e5ef;
   z-index: 99999; }
 
 .load-circle {
@@ -509,21 +509,24 @@ h1,
 h2,
 .h3,
 h3 {
-  font-family: "Abril Fatface", serif; }
+  font-family: "IBM Plex Sans", serif;
+  font-weight: 700;
+  letter-spacing: -2px;
+  text-transform: uppercase; }
 
 .h1,
 h1 {
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   margin-top: 3rem; }
 
 .h2,
 h2 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-top: 3rem; }
 
 .h3,
 h3 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-top: 3rem; }
 
 .h4,
@@ -534,7 +537,7 @@ h4 {
 .h5,
 h5 {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   margin-top: 1rem;
   margin-bottom: .5rem; }
 
@@ -545,7 +548,7 @@ h6 {
   text-transform: uppercase; }
 
 .display-1 {
-  font-size: 2.5rem; }
+  font-size: 3.5rem; }
 
 /* ----------------------
 *	owl 
@@ -558,7 +561,7 @@ h6 {
     width: 15px;
     height: 15px;
     background: #ffffff;
-    border: 1px solid #ea2340;
+    border: 1px solid #97e5ef;
     -moz-transition: ease all 0.55s;
     -o-transition: ease all 0.55s;
     -webkit-transition: ease all 0.55s;
@@ -569,7 +572,7 @@ h6 {
       border-color: #ffffff;
       background: none; }
     .owl-dots .owl-dot.active {
-      background: #ea2340; }
+      background: #97e5ef; }
       .owl-carousel-white .owl-dots .owl-dot.active {
         background: #ffffff; }
 
@@ -580,16 +583,16 @@ h6 {
 /* Background color
 -------------------------------*/
 .theme-bg {
-  background-color: #ea2340; }
+  background-color: #97e5ef; }
 
 .gray-bg {
-  background-color: #f5eee6; }
+  background-color: #eef1e8; }
 
 .white-bg {
   background-color: #ffffff; }
 
 .dark-bg {
-  background-color: #1c1d24; }
+  background-color: #0b0b0a; }
 
 /* Text color
 -------------------------------*/
@@ -600,16 +603,16 @@ h6 {
   color: rgba(255, 255, 255, 0.65); }
 
 .dark-color {
-  color: #1c1d24; }
+  color: #0b0b0a; }
 
 .body-color {
-  color: #1c1d24; }
+  color: #0b0b0a; }
 
 .theme-color {
-  color: #ea2340; }
+  color: #97e5ef; }
 
 .medium-dark-color {
-  color: #807C78; }
+  color: #4A4B48; }
 
 /*	Toggle Menu
 -------------------------*/
@@ -621,7 +624,7 @@ h6 {
   border-radius: 0;
   padding: 0;
   margin-left: 15px;
-  background: #ea2340;
+  background: #97e5ef;
   border: none; }
   .header-transparent-white .navbar-toggler {
     background: #ffffff; }
@@ -638,8 +641,8 @@ h6 {
     background: #ffffff;
     color: #ffffff; }
     .header-transparent-white .navbar-toggler span {
-      background: #1c1d24;
-      color: #1c1d24; }
+      background: #0b0b0a;
+      color: #0b0b0a; }
 
 .header-nav {
   position: fixed;
@@ -654,9 +657,10 @@ h6 {
   .header-nav .navbar-logo {
     display: flex;
     align-items: center;
-    color: #1c1d24;
+    color: #0b0b0a;
     font-size: 1.25rem;
-    font-family: "Abril Fatface", serif; }
+    font-weight: 400;
+    font-family: "IBM Plex Sans", serif; }
     .header-nav .navbar-logo img {
       height: 1.25rem;
       margin-right: .25rem; }
@@ -667,10 +671,10 @@ h6 {
     font-size: 22px;
     font-weight: 400;
     line-height: 32px;
-    color: #1c1d24;
+    color: #0b0b0a;
     display: inline-block; }
     .fixed-header .main-navbar .logo-text {
-      color: #1c1d24; }
+      color: #0b0b0a; }
   .main-navbar .logo-dark {
     display: none; }
     .fixed-header .main-navbar .logo-dark {
@@ -709,12 +713,12 @@ h6 {
         padding: 0 !important;
         line-height: 42px;
         display: block;
-        color: #1c1d24;
+        color: #0b0b0a;
         position: relative; }
         .fixed-header .main-navbar .navbar-nav > li > a {
-          color: #1c1d24; }
+          color: #0b0b0a; }
         .main-navbar .navbar-nav > li > a:hover {
-          color: #ea2340; }
+          color: #97e5ef; }
         .main-navbar .navbar-nav > li > a:after {
           content: "";
           position: absolute;
@@ -736,17 +740,17 @@ h6 {
 -----------------------------*/
 .header-nav-left .navbar-nav > li .nav-link {
   padding: 10px;
-  color: #1c1d24;
+  color: #0b0b0a;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 400; }
   .header-nav-left .navbar-nav > li .nav-link i {
     width: 22px; }
   .header-nav-left .navbar-nav > li .nav-link.active {
-    color: #ea2340; }
+    color: #97e5ef; }
 
 .header-nav-left .navbar-nav > li:hover .nav-link {
-  color: #ea2340; }
+  color: #97e5ef; }
 
 @media (min-width: 1201px) {
   .header-nav-left {
@@ -784,7 +788,7 @@ h6 {
         margin: 0;
         padding: 10px;
         text-align: center;
-        color: #1c1d24;
+        color: #0b0b0a;
         font-weight: 700;
         text-transform: uppercase; }
     .header-nav-left .header-social {
@@ -799,7 +803,7 @@ h6 {
     padding: 15px 0;
     z-index: 4; }
     .header-nav-left.fixed-header {
-      background: #1c1d24; }
+      background: #0b0b0a; }
     .header-nav-left .header-logo {
       display: flex;
       align-items: center;
@@ -814,7 +818,7 @@ h6 {
         text-transform: uppercase;
         line-height: 24px;
         vertical-align: top;
-        color: #1c1d24; }
+        color: #0b0b0a; }
     .header-nav-left .navbar-collapse {
       background: #ffffff; }
     .header-nav-left .header-social {
@@ -838,9 +842,9 @@ h6 {
       overflow-y: auto; }
     .main-navbar .navbar-nav > li {
       margin: 0;
-      border-top: 1px solid #eee; }
+      border-top: 1px solid #f3f3f3; }
       .main-navbar .navbar-nav > li:last-of-type {
-        border-bottom: 1px solid #eee; }
+        border-bottom: 1px solid #f3f3f3; }
       .main-navbar .navbar-nav > li > a {
         text-transform: uppercase;
         font-size: 13px;
@@ -848,9 +852,9 @@ h6 {
         padding: 0 15px;
         line-height: 40px;
         display: block;
-        color: #1c1d24; }
+        color: #0b0b0a; }
         .main-navbar .navbar-nav > li > a.active {
-          color: #ea2340; } }
+          color: #97e5ef; } }
 
 /* Desktop
 --------------------*/
@@ -876,7 +880,7 @@ h6 {
       transition: ease all 0.55s;
       opacity: 0; }
       .simple-dropdown .m-dropdown-menu > li > a {
-        color: #1c1d24;
+        color: #0b0b0a;
         padding: 8px 15px;
         display: block;
         font-size: 14px;
@@ -887,7 +891,7 @@ h6 {
           width: 24px;
           display: inline-block; }
       .simple-dropdown .m-dropdown-menu > li:hover > a {
-        color: #ea2340; }
+        color: #97e5ef; }
     .simple-dropdown:hover .m-dropdown-menu {
       opacity: 1;
       top: 100%;
@@ -905,7 +909,7 @@ h6 {
         position: relative;
         padding: 6px 0; }
         .m-mega-menu .mm-link li > a {
-          color: #1c1d24;
+          color: #0b0b0a;
           padding: 8px 15px;
           display: block;
           font-size: 14px;
@@ -916,7 +920,7 @@ h6 {
             width: 24px;
             display: inline-block; }
         .m-mega-menu .mm-link li:hover > a {
-          color: #ea2340; } }
+          color: #97e5ef; } }
 
 /* Mobile
 --------------------*/
@@ -930,7 +934,7 @@ h6 {
     line-height: 40px;
     text-align: center;
     border-left: 1px solid #e6e6e6;
-    color: #1c1d24; }
+    color: #0b0b0a; }
   .simple-dropdown {
     position: relative; }
     .simple-dropdown .m-dropdown-menu {
@@ -951,9 +955,9 @@ h6 {
           font-size: 13px;
           font-weight: 600;
           line-height: 40px;
-          color: #1c1d24; }
+          color: #0b0b0a; }
           .simple-dropdown .m-dropdown-menu > li > a:hover {
-            color: #ea2340; }
+            color: #97e5ef; }
     .simple-dropdown .m-dropdown-menu .container {
       padding: 0; }
     .simple-dropdown .m-dropdown-menu .mm-link {
@@ -981,7 +985,7 @@ h6 {
       display: block; } }
 
 .footer.footer-dark {
-  background: #0c0c17; }
+  background: #0b0b0a; }
 
 .footer-top {
   padding: 60px 0; }
@@ -999,16 +1003,6 @@ h6 {
     margin: 0 0 30px; }
     .footer-dark .footer-top .fot-title {
       color: #ffffff; }
-  .footer-top .nav li:not(:first-child) {
-    margin-top: 8px; }
-  .footer-top .nav a {
-    font-size: 14px;
-    font-weight: 400;
-    display: inline-block; }
-    .footer-dark .footer-top .nav a {
-      color: #999999; }
-      .footer-dark .footer-top .nav a:hover {
-        color: #ffffff; }
   .footer-top .fot-logo {
     color: #ffffff;
     padding-bottom: 25px;
@@ -1085,7 +1079,7 @@ h6 {
       left: 0;
       right: 0;
       height: 2px;
-      background: #ea2340;
+      background: #97e5ef;
       opacity: 0.2; }
 
 .page-title {
@@ -1109,7 +1103,7 @@ h6 {
     font-size: 14px;
     font-weight: 400;
     position: relative;
-    color: #1c1d24; }
+    color: #0b0b0a; }
     .breadcrumb li + li {
       padding-left: 17px;
       margin-left: 17px; }
@@ -1126,7 +1120,7 @@ h6 {
         bottom: 0;
         margin: auto; }
     .breadcrumb li a {
-      color: #1c1d24; }
+      color: #0b0b0a; }
   .breadcrumb.white li {
     color: #ffffff; }
     .breadcrumb.white li a {
@@ -1295,7 +1289,7 @@ h6 {
   opacity: 1; }
 
 .font-alt {
-  font-family: "Lato", sans-serif; }
+  font-family: "IBM Plex Serif", sans-serif; }
 
 /*	Property
 ---------------------------*/
@@ -4379,7 +4373,7 @@ h6 {
     display: inline-block;
     font-size: 54px; }
   .feature-box-1:hover {
-    border-color: #ea2340; }
+    border-color: #97e5ef; }
 
 .feature-box-2 {
   text-align: center; }
@@ -4388,9 +4382,9 @@ h6 {
     width: 100px;
     height: 100px;
     line-height: 100px;
-    border: 2px solid #ea2340;
+    border: 2px solid #97e5ef;
     font-size: 40px;
-    color: #ea2340;
+    color: #97e5ef;
     text-align: center;
     border-radius: 50%;
     display: inline-block;
@@ -4404,7 +4398,7 @@ h6 {
       position: absolute;
       top: 0px;
       left: 0px;
-      background: #ea2340;
+      background: #97e5ef;
       border-radius: 50%;
       font-size: 17px;
       color: #ffffff;
@@ -4412,7 +4406,7 @@ h6 {
   .feature-box-2 h6 {
     margin: 0;
     font-size: 15px;
-    color: #1c1d24; }
+    color: #0b0b0a; }
 
 .feature-box-3 {
   border: 1px solid #eee;
@@ -4429,7 +4423,7 @@ h6 {
     right: 0;
     width: 50px;
     height: 2px;
-    background: #ea2340;
+    background: #97e5ef;
     margin: auto;
     -moz-transition: ease all 0.35s;
     -o-transition: ease all 0.35s;
@@ -4443,7 +4437,7 @@ h6 {
     vertical-align: top;
     position: relative;
     z-index: 1;
-    color: #1c1d24; }
+    color: #0b0b0a; }
     .feature-box-3 .icon i {
       line-height: 90px;
       font-size: 45px; }
@@ -4454,7 +4448,7 @@ h6 {
       left: -10px;
       width: 60px;
       height: 60px;
-      background: #ea2340;
+      background: #97e5ef;
       border-radius: 50%;
       opacity: 0.2;
       z-index: -1;
@@ -4464,7 +4458,7 @@ h6 {
       transition: ease all 0.35s; }
   .feature-box-3 h5 {
     font-size: 16px;
-    color: #1c1d24;
+    color: #0b0b0a;
     font-weight: 600;
     margin: 15px 0;
     position: relative; }
@@ -4502,7 +4496,7 @@ h6 {
       position: absolute;
       bottom: 13px;
       left: 16px;
-      color: #1c1d24; }
+      color: #0b0b0a; }
   .gallery-box:hover .gallery-info {
     opacity: 1; }
 
@@ -4510,7 +4504,7 @@ h6 {
 .portfolio-filter-01 .filter li {
   cursor: pointer;
   margin: 0 15px;
-  color: #1c1d24;
+  color: #0b0b0a;
   position: relative;
   padding: 5px 0;
   font-weight: 600;
@@ -4529,7 +4523,7 @@ h6 {
     bottom: 0;
     margin: auto;
     height: 2px;
-    background: #ea2340;
+    background: #97e5ef;
     position: absolute;
     -moz-transition: ease all 0.55s;
     -o-transition: ease all 0.55s;
@@ -4540,9 +4534,9 @@ h6 {
   .portfolio-filter-01 .filter li:first-child {
     margin-left: 0; }
   .portfolio-filter-01 .filter li:hover {
-    color: #ea2340; }
+    color: #97e5ef; }
   .portfolio-filter-01 .filter li.active {
-    color: #ea2340; }
+    color: #97e5ef; }
     .portfolio-filter-01 .filter li.active:after {
       width: 100%; }
 
@@ -4559,7 +4553,7 @@ h6 {
     left: 15px;
     right: 15px;
     bottom: 0;
-    background: rgba(28, 29, 36, 0.7);
+    background: rgba(11, 11, 10, 0.7);
     -moz-transition: ease all 0.55s;
     -o-transition: ease all 0.55s;
     -webkit-transition: ease all 0.55s;
@@ -4596,7 +4590,7 @@ h6 {
   padding: 20px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.21);
   text-align: center;
-  background: #ea2340; }
+  background: #97e5ef; }
 
 .price-table .pt-price-box {
   padding: 0;
@@ -4620,7 +4614,7 @@ h6 {
 
 .price-table .pt-content {
   padding: 25px 20px;
-  border-bottom: 1px solid rgba(28, 29, 36, 0.06); }
+  border-bottom: 1px solid rgba(11, 11, 10, 0.06); }
   .price-table .pt-content ul {
     margin: 0;
     padding: 0;
@@ -4660,7 +4654,7 @@ h6 {
       font-size: 16px;
       font-weight: 600;
       margin: 0 0 5px;
-      color: #1c1d24; }
+      color: #0b0b0a; }
     .our-team .team-info label {
       margin: 0 0 15px;
       font-weight: 400;
@@ -4704,7 +4698,7 @@ h6 {
 
 .quotes {
   padding-left: 35px;
-  border-left: 5px solid #1c1d24; }
+  border-left: 5px solid #0b0b0a; }
 
 .icon {
   display: inline-block;
