--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -1,29 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,300i,400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Lato:300,300i,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|IBM+Plex+Serif:300,300i,500&display=swap');
 // Color system
-$px-theme:                      #ea2340;
-$px-body-color:                 #1c1d24;
+$px-theme:                      #97e5ef; //#ea2340;
+$px-body-color:                 #0b0b0a;
 
 $px-black:						#000000 !default; 
 $px-white:						#ffffff !default;
-$px-dark:						#1c1d24 !default;
-$px-medium-dark:				#807C78 !default;
-$px-gray:						#f5eee6 !default;
-$px-light-gray:					#eee !default;
+$px-dark:						#0b0b0a !default;
+$px-medium-dark:				#4A4B48 !default;
+$px-gray:						#eef1e8 !default;
+$px-light-gray:					#f3f3f3 !default;
 
 
 // Font
 $px-base-font:					1rem !default;
-$px-h1-font:                	3.5rem !default;
-$px-h2-font:                	2.5rem !default;
-$px-h3-font:                	2rem !default;
+$px-h1-font:                	4.5rem !default;
+$px-h2-font:                	3.5rem !default;
+$px-h3-font:                	2.5rem !default;
 $px-h4-font:                	1.6rem !default;
 $px-h5-font:                	1rem !default;
 $px-h6-font:                	.75rem !default;
 
-$px-font-family:				'Lato', sans-serif; // Main Font Family
-$px-font-alt:					'Lato', sans-serif; // Main Font Family
+$px-top-heading-weight:         700;
+$px-h5-font-weight:             500;
+$px-body-weight:                300;
 
-$px-heading-font-family:         'Abril Fatface', serif; // Heading Font Family
+$px-font-family:				'IBM Plex Serif', sans-serif; // Main Font Family
+$px-font-alt:					'IBM Plex Serif', sans-serif; // Main Font Family
+
+$px-heading-font-family:         'IBM Plex Sans', serif; // Heading Font Family
 
 // Breakpoints
 $px-media-xsm:					567px !default;
