--- a/static/style/master.css
+++ b/static/style/master.css
@@ -516,18 +516,33 @@ h3 {
 
 .h1,
 h1 {
-  font-size: 4.5rem;
-  margin-top: 3rem; }
+  font-size: 3.15rem;
+  margin-top: 2.1rem; }
+  @media (min-width: 576px) {
+    .h1,
+    h1 {
+      font-size: 4.5rem;
+      margin-top: 3rem; } }
 
 .h2,
 h2 {
-  font-size: 3.5rem;
-  margin-top: 3rem; }
+  font-size: 2.45rem;
+  margin-top: 1.75rem; }
+  @media (min-width: 576px) {
+    .h2,
+    h2 {
+      font-size: 3.5rem;
+      margin-top: 2.5rem; } }
 
 .h3,
 h3 {
-  font-size: 2.5rem;
-  margin-top: 3rem; }
+  font-size: 1.75rem;
+  margin-top: 1.4rem; }
+  @media (min-width: 576px) {
+    .h3,
+    h3 {
+      font-size: 2.5rem;
+      margin-top: 2rem; } }
 
 .h4,
 h4 {
@@ -4360,309 +4375,60 @@ h6 {
   100% {
     transform: rotate(360deg); } }
 
-/* Feature
----------------------------------*/
-.feature-box-1 {
-  background: #ffffff;
-  border-radius: 5px;
-  border: 5px solid transparent; }
-  .feature-box-1 .f-icon {
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    display: inline-block;
-    font-size: 54px; }
-  .feature-box-1:hover {
-    border-color: #97e5ef; }
-
-.feature-box-2 {
-  text-align: center; }
-  .feature-box-2 .icon {
-    background: #ffffff;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    border: 2px solid #97e5ef;
-    font-size: 40px;
-    color: #97e5ef;
-    text-align: center;
-    border-radius: 50%;
-    display: inline-block;
-    vertical-align: top;
-    margin-bottom: 18px;
-    position: relative; }
-    .feature-box-2 .icon span {
-      width: 34px;
-      height: 34px;
-      line-height: 30px;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      background: #97e5ef;
-      border-radius: 50%;
-      font-size: 17px;
-      color: #ffffff;
-      border: 2px solid #ffffff; }
-  .feature-box-2 h6 {
-    margin: 0;
-    font-size: 15px;
-    color: #0b0b0a; }
-
-.feature-box-3 {
-  border: 1px solid #eee;
-  background: #fff;
-  padding: 16% 10% 13%;
-  text-align: center;
-  border-radius: 5px;
-  position: relative; }
-  .feature-box-3:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 50px;
-    height: 2px;
-    background: #97e5ef;
-    margin: auto;
-    -moz-transition: ease all 0.35s;
-    -o-transition: ease all 0.35s;
-    -webkit-transition: ease all 0.35s;
-    transition: ease all 0.35s; }
-  .feature-box-3 .icon {
-    width: 90px;
-    height: 90px;
-    text-align: center;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    z-index: 1;
-    color: #0b0b0a; }
-    .feature-box-3 .icon i {
-      line-height: 90px;
-      font-size: 45px; }
-    .feature-box-3 .icon:after {
-      content: "";
-      position: absolute;
-      top: -10px;
-      left: -10px;
-      width: 60px;
-      height: 60px;
-      background: #97e5ef;
-      border-radius: 50%;
-      opacity: 0.2;
-      z-index: -1;
-      -moz-transition: ease all 0.35s;
-      -o-transition: ease all 0.35s;
-      -webkit-transition: ease all 0.35s;
-      transition: ease all 0.35s; }
-  .feature-box-3 h5 {
-    font-size: 16px;
-    color: #0b0b0a;
-    font-weight: 600;
-    margin: 15px 0;
-    position: relative; }
-  .feature-box-3 p {
-    margin: 0; }
-  .feature-box-3:hover .icon {
-    color: #fff; }
-    .feature-box-3:hover .icon:after {
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      opacity: 1; }
-  .feature-box-3:hover:after {
-    width: 100%; }
-
-/*Galletry*/
-.gallery-box {
-  position: relative;
+/* Blog
+--------------------------------*/
+.blog-grid .blog-grid-img {
   overflow: hidden; }
-  .gallery-box .gallery-info {
-    position: absolute;
-    top: -50px;
-    right: -50px;
-    width: 100px;
-    height: 100px;
-    background: #ffffff;
-    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    -moz-transition: ease all 0.55s;
-    -o-transition: ease all 0.55s;
-    -webkit-transition: ease all 0.55s;
-    transition: ease all 0.55s; }
-    .gallery-box .gallery-info a {
-      position: absolute;
-      bottom: 13px;
-      left: 16px;
-      color: #0b0b0a; }
-  .gallery-box:hover .gallery-info {
-    opacity: 1; }
+  .blog-grid .blog-grid-img img {
+    -moz-transition: ease all 0.85s;
+    -o-transition: ease all 0.85s;
+    -webkit-transition: ease all 0.85s;
+    transition: ease all 0.85s;
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1); }
 
-/*Portfolio Filter*/
-.portfolio-filter-01 .filter li {
-  cursor: pointer;
-  margin: 0 15px;
-  color: #0b0b0a;
-  position: relative;
-  padding: 5px 0;
+.blog-grid .blog-gird-info {
+  padding: 15px 0 0; }
+
+.blog-grid h5 {
+  margin: 0;
+  padding: 10px 0 15px;
+  font-size: 22px;
   font-weight: 600;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: normal; }
-  @media (max-width: 767px) {
-    .portfolio-filter-01 .filter li {
-      font-size: 12px;
-      margin: 0 7px; } }
-  .portfolio-filter-01 .filter li:after {
-    content: "";
-    width: 0px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    height: 2px;
-    background: #97e5ef;
-    position: absolute;
-    -moz-transition: ease all 0.55s;
-    -o-transition: ease all 0.55s;
-    -webkit-transition: ease all 0.55s;
-    transition: ease all 0.55s; }
-  .portfolio-filter-01 .filter li:last-child {
-    margin-right: 0; }
-  .portfolio-filter-01 .filter li:first-child {
-    margin-left: 0; }
-  .portfolio-filter-01 .filter li:hover {
-    color: #97e5ef; }
-  .portfolio-filter-01 .filter li.active {
-    color: #97e5ef; }
-    .portfolio-filter-01 .filter li.active:after {
-      width: 100%; }
+  color: #0b0b0a; }
+  .blog-grid h5 a {
+    color: #0b0b0a; }
+    .blog-grid h5 a:hover {
+      color: #97e5ef; }
 
-/*Portfolio Style 1*/
-.portfolio-box-01 {
-  height: 100%;
-  overflow: hidden; }
-  .portfolio-box-01 .portfolio-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 15px;
-    right: 15px;
-    bottom: 0;
-    background: rgba(11, 11, 10, 0.7);
-    -moz-transition: ease all 0.55s;
-    -o-transition: ease all 0.55s;
-    -webkit-transition: ease all 0.55s;
-    transition: ease all 0.55s;
-    opacity: 0; }
-    .portfolio-box-01 .portfolio-info a {
-      color: white;
-      text-align: center; }
-  .portfolio-box-01 .portfolio-img {
-    display: flex;
-    max-width: 100%;
-    height: 100%; }
-  .portfolio-box-01:hover .portfolio-info {
-    position: absolute;
-    opacity: 1; }
+.blog-grid p {
+  margin: 0;
+  font-size: 15px; }
 
-/* Price table
---------------------*/
-.price-table h5 {
-  margin: 0 0 26px;
-  text-align: center;
-  font-weight: 600;
+.blog-grid .b-meta span {
   font-size: 12px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
+  color: #0b0b0a;
+  line-height: 15px; }
+
+.blog-grid .b-meta .meta {
   display: inline-block;
-  vertical-align: top;
-  padding: 6px 22px;
-  color: #ffffff;
-  border-radius: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3); }
+  border-left: 1px solid #ddd;
+  line-height: 15px;
+  margin: 0 0 0 6px;
+  padding: 0 0 0px 6px; }
 
-.price-table .pt-top {
-  padding: 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
-  text-align: center;
-  background: #97e5ef; }
+.blog-grid .btn-grid {
+  margin-top: 15px; }
 
-.price-table .pt-price-box {
-  padding: 0;
-  text-align: center;
-  color: #ffffff; }
-  .price-table .pt-price-box .pt-currency {
-    font-size: 16px;
-    vertical-align: top;
-    display: inline-block;
-    font-weight: 600; }
-  .price-table .pt-price-box .pt-price {
-    font-size: 56px;
-    font-weight: 600;
-    line-height: 47px; }
-  .price-table .pt-price-box .pt-period {
-    display: inline-block;
-    vertical-align: middle; }
-    .price-table .pt-price-box .pt-period:before {
-      content: "/";
-      margin-right: 5px; }
-
-.price-table .pt-content {
-  padding: 25px 20px;
-  border-bottom: 1px solid rgba(11, 11, 10, 0.06); }
-  .price-table .pt-content ul {
-    margin: 0;
-    padding: 0;
-    text-align: center; }
-  .price-table .pt-content li {
-    list-style: none;
-    position: relative;
-    padding: 5px 0; }
-
-.price-table .pt-action {
-  padding: 20px;
-  text-align: center; }
-
-/* Team
---------------------*/
-.our-team {
-  position: relative; }
-  .our-team .team-img {
-    overflow: hidden;
-    border-radius: 5px; }
-  .our-team .team-info {
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    position: relative;
-    padding: 20px 15px;
-    margin-top: -40px;
-    background: #ffffff;
-    box-shadow: 0px 3px 10px 0px rgba(38, 59, 94, 0.1);
-    top: 0;
-    border-radius: 5px;
-    -moz-transition: ease all 0.55s;
-    -o-transition: ease all 0.55s;
-    -webkit-transition: ease all 0.55s;
-    transition: ease all 0.55s; }
-    .our-team .team-info h6 {
-      font-size: 16px;
-      font-weight: 600;
-      margin: 0 0 5px;
-      color: #0b0b0a; }
-    .our-team .team-info label {
-      margin: 0 0 15px;
-      font-weight: 400;
-      line-height: normal;
-      font-size: 15px; }
-  .our-team:hover .team-info {
-    top: -15px;
-    box-shadow: 0px 30px 60px 0px rgba(38, 59, 94, 0.1); }
+.blog-grid:hover .blog-grid-img img {
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1); }
 
 /* Contact us
 --------------------*/
@@ -4720,7 +4486,7 @@ h6 {
       background-image: url("../img/esplanade_bg.png"); } }
 
 #zalora_project_overview {
-  background-image: url("../img/esplanade_bg_sm.png");
+  background-image: url("../img/zalora_bg_sm.png");
   background-size: cover; }
   @media (min-width: 576px) {
     #zalora_project_overview {
