--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -23,354 +23,60 @@
   	}
 }
 
-/* Feature
----------------------------------*/
 
-.feature-box-1 {
-	background: $px-white;
-	border-radius: 5px;
-	border: 5px solid transparent;
-	.f-icon {
-	    width: 80px;
-	    height: 80px;
-	    line-height: 80px;
-	    display: inline-block;
-	    font-size: 54px;
-	}
-	&:hover {
-		border-color: $px-theme;
-	}
-}
-
-.feature-box-2 {
-	text-align: center;
-	.icon {
-		background: $px-white;
-		width: 100px;
-		height: 100px;
-		line-height: 100px;
-		border: 2px solid $px-theme;
-		font-size: 40px;
-		color: $px-theme;
-		text-align: center;
-		border-radius: 50%;
-		display: inline-block;
-		vertical-align: top;
-		margin-bottom: 18px;
-		position: relative;
-		span {
-		    width: 34px;
-		    height: 34px;
-		    line-height: 30px;
-		    position: absolute;
-		    top: 0px;
-		    left: 0px;
-		    background: $px-theme;
-		    border-radius: 50%;
-		    font-size: 17px;
-		    color: $px-white;
-		    border: 2px solid $px-white;
+/* Blog
+--------------------------------*/
+.blog-grid {
+	.blog-grid-img {
+		overflow: hidden;
+		img {
+			@include transition(ease all 0.85s);
+			@include scale(1);
 		}
 	}
-	h6 {
-		margin: 0;
-		font-size: 15px;
-		color: $px-dark;
-	}
-}
-
-.feature-box-3 {
-    border: 1px solid #eee;
-    background: #fff;
-    padding: 16% 10% 13%;
-    text-align: center;
-    border-radius: 5px;
-    position: relative;
-    &:after {
-	    content: "";
-	    position: absolute;
-	    bottom: 0;
-	    left: 0;
-	    right: 0;
-	    width: 50px;
-	    height: 2px;
-	    background: $px-theme;
-	    margin: auto;
-	    @include transition(ease all 0.35s);
-    }
-	.icon {
-	    width: 90px;
-	    height: 90px;
-	    text-align: center;
-	    display: inline-block;
-	    vertical-align: top;
-	    position: relative;
-	    z-index: 1;
-	    color: $px-dark;
-	    i {
-	    	line-height: 90px;
-	    	font-size: 45px;	
-	    }
-	    &:after {
-    	    content: "";
-		    position: absolute;
-		    top: -10px;
-		    left: -10px;
-		    width: 60px;
-		    height: 60px;
-		    background: $px-theme;
-		    border-radius: 50%;
-		    opacity: 0.2;
-		    z-index: -1;
-		    @include transition(ease all 0.35s);
-	    }
+	.blog-gird-info {
+	    padding: 15px 0 0;
 	}
 	h5 {
-	    font-size: 16px;
-	    color: $px-dark;
+	    margin: 0;
+	    padding: 10px 0 15px;
+	    font-size: 22px;
 	    font-weight: 600;
-	    margin: 15px 0;
-	    position: relative;
-	}
-	p {
-		margin: 0;
-	}
-	&:hover {
-		.icon {
-			color: #fff;
-			&:after {
-				width:100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				opacity: 1;
-			}
-		}
-		&:after {
-			width: 100%;
-		}
-	}
-}
-
-
-/*Galletry*/
-.gallery-box {
-	position: relative;
-	overflow: hidden;
-	.gallery-info {
-	    position: absolute;
-	    top: -50px;
-	    right: -50px;
-	    width: 100px;
-	    height: 100px;
-	    background: $px-white;
-	    box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.1);
-	    opacity: 0;
-	    @include transition(ease all 0.55s);
-	    a {
-		    position: absolute;
-		    bottom: 13px;
-		    left: 16px;
-		    color: $px-dark;
-	    }
-	}
-	&:hover {
-		.gallery-info {
-			opacity: 1;
-		}
-	}
-}
-
-/*Portfolio Filter*/
-.portfolio-filter-01 {
-	.filter {
-		li {
-			cursor: pointer;
-			margin: 0 15px;
+		color: $px-dark;
+		a {
 			color: $px-dark;
-			position: relative;
-			padding: 5px 0;
-			font-weight: 600;
-			text-transform: uppercase;
-			font-size: 14px;
-			line-height: normal;
-			@include down-sm {
-				font-size: 12px;
-				margin: 0 7px;
-			}
-			&:after {
-				content:"";
-				width: 0px;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				margin: auto;
-				height: 2px;
-				background: $px-theme;
-				position: absolute;
-				@include transition(ease all 0.55s);
-			}
-			&:last-child {
-				margin-right: 0;
-			}
-			&:first-child {
-				margin-left: 0;
-			}
 			&:hover {
 				color: $px-theme;
 			}
-			&.active {
-				color: $px-theme;
-				&:after {
-					width:100%;
-				}
+		}
+	}
+	p {
+		margin: 0;
+		font-size: 15px;
+	}
+	.b-meta {
+		span {
+			font-size: 12px;
+			color: $px-body-color;
+			line-height: 15px;
+		}
+		.meta {
+	        display: inline-block;
+		    border-left: 1px solid #ddd;
+		    line-height: 15px;
+		    margin: 0 0 0 6px;
+		    padding: 0 0 0px 6px;
+		}
+	}
+	.btn-grid {
+		margin-top: 15px;
+	}
+	&:hover {
+		.blog-grid-img {
+			img {
+				@include scale(1.1);
 			}
-		}
-	}
-}
-
-
-/*Portfolio Style 1*/
-.portfolio-box-01 {
-	height: 100%;
-	overflow: hidden;
-	.portfolio-info {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		position: absolute;
-		top: 0;
-		left: 15px;
-		right: 15px;
-		bottom: 0;
-		background: rgba($px-dark, 0.7);
-		@include transition(ease all 0.55s);
-		opacity: 0;
-		a {
-			color: white;
-			text-align: center;
-		}
-	}
-
-	.portfolio-img {
-		display: flex;
-		max-width: 100%;
-		height: 100%;
-	}
-	&:hover {
-		.portfolio-info {
-			position: absolute;
-			opacity: 1;
-		}
-	}
-}
-
-/* Price table
---------------------*/
-.price-table {
-	
-	h5 {
-        margin: 0 0 26px;
-	    text-align: center;
-	    font-weight: 600;
-	    font-size: 12px;
-	    letter-spacing: 3px;
-	    text-transform: uppercase;
-	    display: inline-block;
-	    vertical-align: top;
-	    padding: 6px 22px;
-	    color: $px-white;
-	    border-radius: 50px;
-	    border: 1px solid rgba($px-white,.3);
-	}
-	.pt-top {
-		padding: 20px;
-		border-bottom: 1px solid rgba($px-white, 0.21);
-		text-align: center;
-		background: $px-theme;
-	}
-	.pt-price-box {
-		padding: 0;
-		text-align: center;
-		color: $px-white;
-		.pt-currency{
-			font-size: 16px;
-		    vertical-align: top;
-		    display: inline-block;
-		    font-weight: 600;
-		}
-		.pt-price {
-		    font-size: 56px;
-		    font-weight: 600;
-		    line-height: 47px;
-		}
-		.pt-period {
-		    display: inline-block;
-		    vertical-align: middle;
-		    &:before {
-	    	    content: "/";
-				margin-right: 5px;
-		    }
-		}
-	}
-	.pt-content {
-		padding: 25px 20px;
-		border-bottom: 1px solid rgba($px-dark, 0.06);
-		ul {
-			margin: 0;
-			padding: 0;
-			text-align: center;
-		}
-		li {
-		    list-style: none;
-		    position: relative;
-		    padding: 5px 0;
-		}
-	}
-	.pt-action {
-		padding: 20px;
-		text-align: center;
-	}
-}
-
-/* Team
---------------------*/
-.our-team {
-	position: relative;
-	.team-img {
-		overflow: hidden;
-		border-radius: 5px;
-	}
-	.team-info {
-	    text-align: center;
-	    margin-left: 10px;
-	    margin-right: 10px;
-	    position: relative;
-	    padding: 20px 15px;
-	    margin-top: -40px;
-	    background: $px-white;
-	    box-shadow: 0px 3px 10px 0px rgba(38, 59, 94, 0.1);
-	    top: 0;
-	    border-radius: 5px;
-	    @include transition(ease all 0.55s);
-		h6 {
-		    font-size: 16px;
-		    font-weight: 600;
-		    margin: 0 0 5px;
-			color: $px-dark;
-		}
-		label {
-		    margin: 0 0 15px;
-		    font-weight: 400;
-		    line-height: normal;
-		    font-size: 15px;
-		}
-	}
-	&:hover {
-		.team-info {
-			top: -15px;
-			box-shadow: 0px 30px 60px 0px rgba(38, 59, 94, 0.1);
-		}
+		}	
 	}
 }
 
@@ -443,7 +149,7 @@
 }
 
 #zalora_project_overview {
-	background-image: url('../img/esplanade_bg_sm.png');
+	background-image: url('../img/zalora_bg_sm.png');
 	background-size: cover;
 	@media (min-width: 576px) {
 		background-image: url('../img/zalora_bg.png');
