--- a/static/style/master.css
+++ b/static/style/master.css
@@ -607,7 +607,10 @@ h6 {
   background-color: #ffffff; }
 
 .dark-bg {
-  background-color: #0b0b0a; }
+  background-color: rgba(11, 11, 10, 0.6); }
+
+.light-bg {
+  background-color: rgba(255, 255, 255, 0.65); }
 
 /* Text color
 -------------------------------*/
@@ -664,7 +667,6 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.09);
   z-index: 10; }
   .header-nav.fixed-header {
     background: #ffffff;
@@ -4563,8 +4565,15 @@ h6 {
       background-image: url("../img/zalora_bg.png"); } }
 
 #autodesk_project_overview {
-  background-image: url("../img/autodesk_bg_sm");
+  background-image: url("../img/autodesk_bg_sm.png");
   background-size: cover; }
   @media (min-width: 576px) {
     #autodesk_project_overview {
-      background-image: url("../img/autodesk_bg.png"); } }
+      background-image: url("../img/autodesk_bg.jpg"); } }
+
+#huemail_project_overview {
+  background-image: url("../img/huemail_bg_sm.png");
+  background-size: cover; }
+  @media (min-width: 576px) {
+    #huemail_project_overview {
+      background-image: url("../img/huemail_bg.png"); } }
