--- a/static/style/scss/header.scss
+++ b/static/style/scss/header.scss
@@ -39,7 +39,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	border-bottom: 1px solid rgba($px-white, 0.09);
+	// border-bottom: 1px solid rgba($px-white, 0.09);
 	z-index: 10;
 	&.fixed-header {
 		background: $px-white;
