--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -4,6 +4,7 @@
 $px-theme:                      #97e5ef; //#ea2340;
 $px-body-color:                 #0b0b0a;
 
+$px-theme-dark:                 #1CA3B5;
 $px-black:						#000000 !default; 
 $px-white:						#ffffff !default;
 $px-dark:						#0b0b0a !default;
