--- a/static/style/master.css
+++ b/static/style/master.css
@@ -177,7 +177,7 @@ Table of contents
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 400;
-  color: #97e5ef;
+  color: #1CA3B5;
   border-bottom: 2px solid currentColor; }
   .m-btn-link:hover {
     color: #0b0b0a;
@@ -226,8 +226,8 @@ Table of contents
       box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-t-theme {
     background: transparent;
-    color: #97e5ef;
-    border-color: #97e5ef;
+    color: #1CA3B5;
+    border-color: #1CA3B5;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-t-theme:hover {
       background: #97e5ef;
@@ -430,7 +430,7 @@ html {
   overflow-x: hidden; }
 
 a {
-  color: #97e5ef; }
+  color: #1CA3B5; }
   a:hover {
     color: #74dcea;
     text-decoration: none;
