--- a/static/style/master.css
+++ b/static/style/master.css
@@ -1,7 +1,7 @@
 /*----------------------------------
 Table of contents
 ----------------------------------*/
-@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|IBM+Plex+Serif:300,300i,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fjalla+One&family=Open+Sans:wght@300;400;600&display=swap");
 .shake-vertical {
   display: block;
   -webkit-animation: shake-vertical 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 4s both;
@@ -153,7 +153,7 @@ Table of contents
   color: #1CA3B5;
   border-bottom: 2px solid currentColor; }
   .m-btn-link:hover {
-    color: #0b0b0a;
+    color: #212121;
     cursor: pointer; }
 
 .m-btn {
@@ -194,8 +194,8 @@ Table of contents
     border-color: #97e5ef;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-theme:hover {
-      background: #0b0b0a;
-      border-color: #0b0b0a;
+      background: #212121;
+      border-color: #212121;
       box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-t-theme {
     background: transparent;
@@ -208,44 +208,44 @@ Table of contents
       color: #ffffff;
       box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-dark {
-    background: #0b0b0a;
+    background: #212121;
     color: #ffffff;
-    border-color: #0b0b0a;
-    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
+    border-color: #212121;
+    box-shadow: 0px 8px 15px rgba(33, 33, 33, 0.1); }
     .m-btn.m-btn-dark:hover {
       background: #97e5ef;
       border-color: #97e5ef;
       box-shadow: 0px 15px 20px rgba(151, 229, 239, 0.4); }
   .m-btn.m-btn-t-dark {
     background: transparent;
-    color: #0b0b0a;
-    border-color: #0b0b0a;
+    color: #212121;
+    border-color: #212121;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); }
     .m-btn.m-btn-t-dark:hover {
-      background: #0b0b0a;
-      border-color: #0b0b0a;
+      background: #212121;
+      border-color: #212121;
       color: #ffffff;
-      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
+      box-shadow: 0px 15px 20px rgba(33, 33, 33, 0.4); }
   .m-btn.m-btn-white {
     background: #ffffff;
     color: #97e5ef;
     border-color: #ffffff;
-    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
+    box-shadow: 0px 8px 15px rgba(33, 33, 33, 0.1); }
     .m-btn.m-btn-white:hover {
       background: transparent;
       border-color: #ffffff;
       color: #ffffff;
-      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
+      box-shadow: 0px 15px 20px rgba(33, 33, 33, 0.4); }
   .m-btn.m-btn-t-white {
     background: transparent;
     color: #ffffff;
     border-color: #ffffff;
-    box-shadow: 0px 8px 15px rgba(11, 11, 10, 0.1); }
+    box-shadow: 0px 8px 15px rgba(33, 33, 33, 0.1); }
     .m-btn.m-btn-t-white:hover {
       background: #ffffff;
       border-color: #ffffff;
-      color: #0b0b0a;
-      box-shadow: 0px 15px 20px rgba(11, 11, 10, 0.4); }
+      color: #212121;
+      box-shadow: 0px 15px 20px rgba(33, 33, 33, 0.4); }
 
 /* Icon
 ----------------*/
@@ -276,13 +276,13 @@ Table of contents
 .social-icon.si-theme a {
   background: #97e5ef; }
   .social-icon.si-theme a:hover {
-    background: #0b0b0a;
+    background: #212121;
     color: #ffffff; }
 
 .social-icon.si-white a {
   background: #ffffff;
   border: 1px solid #ffffff;
-  color: #0b0b0a; }
+  color: #212121; }
   .social-icon.si-white a:hover {
     background: transparent;
     color: #ffffff; }
@@ -293,15 +293,15 @@ Table of contents
   color: #ffffff; }
   .social-icon.si-t-white a:hover {
     background: #ffffff;
-    color: #0b0b0a; }
+    color: #212121; }
 
 .social-icon.si-dark a {
-  background: #0b0b0a;
-  border: 1px solid #0b0b0a;
+  background: #212121;
+  border: 1px solid #212121;
   color: #ffffff; }
   .social-icon.si-dark a:hover {
     background: #4A4B48;
-    color: #0b0b0a; }
+    color: #212121; }
 
 .social-icon.si-text a {
   color: #929daf; }
@@ -392,9 +392,9 @@ Table of contents
 *	General
 ------------------------*/
 body {
-  font-family: "IBM Plex Serif", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 1rem;
-  color: #0b0b0a;
+  color: #212121;
   font-weight: 300;
   line-height: 1.6;
   font-smoothing: antialiased; }
@@ -482,9 +482,9 @@ h1,
 h2,
 .h3,
 h3 {
-  font-family: "IBM Plex Sans", serif;
+  font-family: "Fjalla One", sans-serif;
   font-weight: 700;
-  letter-spacing: -2px;
+  letter-spacing: 0px;
   text-transform: uppercase; }
 
 .h1,
@@ -525,13 +525,14 @@ h4 {
 .h5,
 h5 {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 600;
   margin-top: 1rem;
   margin-bottom: .5rem; }
 
 .h6,
 h6 {
   font-size: 0.75rem;
+  font-weight: 600;
   margin-top: 1rem;
   text-transform: uppercase; }
 
@@ -580,7 +581,7 @@ h6 {
   background-color: #ffffff; }
 
 .dark-bg {
-  background-color: rgba(11, 11, 10, 0.6); }
+  background-color: rgba(33, 33, 33, 0.6); }
 
 .light-bg {
   background-color: rgba(255, 255, 255, 0.65); }
@@ -594,10 +595,10 @@ h6 {
   color: rgba(255, 255, 255, 0.65); }
 
 .dark-color {
-  color: #0b0b0a; }
+  color: #212121; }
 
 .body-color {
-  color: #0b0b0a; }
+  color: #212121; }
 
 .theme-color {
   color: #97e5ef; }
@@ -632,8 +633,8 @@ h6 {
     background: #ffffff;
     color: #ffffff; }
     .header-transparent-white .navbar-toggler span {
-      background: #0b0b0a;
-      color: #0b0b0a; }
+      background: #212121;
+      color: #212121; }
 
 .header-nav {
   position: fixed;
@@ -641,17 +642,17 @@ h6 {
   left: 0;
   right: 0;
   z-index: 10;
-  color: #0b0b0a;
+  color: #212121;
   font-size: 1.25rem;
   font-weight: 400;
-  font-family: "IBM Plex Sans", serif; }
+  font-family: "Open Sans", sans-serif; }
   .header-nav.fixed-header {
     background: #ffffff;
     box-shadow: 0px 3px 10px 0px rgba(38, 59, 94, 0.1); }
   .header-nav .navbar-logo {
     display: flex;
     align-items: center;
-    color: #0b0b0a; }
+    color: #212121; }
     .header-nav .navbar-logo img {
       height: 1.25rem;
       margin-right: .25rem; }
@@ -690,10 +691,10 @@ h6 {
         padding: 0 !important;
         line-height: 42px;
         display: block;
-        color: #0b0b0a;
+        color: #212121;
         position: relative; }
         .fixed-header .main-navbar .navbar-nav > li > a {
-          color: #0b0b0a; }
+          color: #212121; }
         .main-navbar .navbar-nav > li > a:hover {
           color: #97e5ef; }
         .main-navbar .navbar-nav > li > a:after {
@@ -739,12 +740,12 @@ h6 {
       padding: 0 15px;
       line-height: 40px;
       display: block;
-      color: #0b0b0a; }
+      color: #212121; }
       .main-navbar .navbar-nav > li > a.active {
         color: #97e5ef; } }
 
 .footer.footer-dark {
-  background: #0b0b0a; }
+  background: #212121; }
 
 .footer-top {
   padding: 60px 0; }
@@ -918,7 +919,7 @@ h6 {
     font-size: 14px;
     font-weight: 400;
     position: relative;
-    color: #0b0b0a; }
+    color: #212121; }
     .breadcrumb li + li {
       padding-left: 17px;
       margin-left: 17px; }
@@ -935,7 +936,7 @@ h6 {
         bottom: 0;
         margin: auto; }
     .breadcrumb li a {
-      color: #0b0b0a; }
+      color: #212121; }
   .breadcrumb.white li {
     color: #ffffff; }
     .breadcrumb.white li a {
@@ -1071,7 +1072,7 @@ h6 {
   opacity: 1; }
 
 .font-alt {
-  font-family: "IBM Plex Serif", sans-serif; }
+  font-family: "Open Sans", sans-serif; }
 
 /*	Property
 ---------------------------*/
@@ -4165,9 +4166,9 @@ h6 {
   padding: 10px 0 15px;
   font-size: 22px;
   font-weight: 600;
-  color: #0b0b0a; }
+  color: #212121; }
   .blog-grid h5 a {
-    color: #0b0b0a; }
+    color: #212121; }
     .blog-grid h5 a:hover {
       color: #97e5ef; }
 
@@ -4177,7 +4178,7 @@ h6 {
 
 .blog-grid .b-meta span {
   font-size: 12px;
-  color: #0b0b0a;
+  color: #212121;
   line-height: 15px; }
 
 .blog-grid .b-meta .meta {
@@ -4231,7 +4232,7 @@ h6 {
 
 .quotes {
   padding-left: 35px;
-  border-left: 5px solid #0b0b0a; }
+  border-left: 5px solid #212121; }
 
 .icon {
   display: inline-block;
