--- a/static/style/scss/header.scss
+++ b/static/style/scss/header.scss
@@ -44,7 +44,7 @@
 	color: $px-dark;
 	font-size: 1.25rem;
 	font-weight: 400;
-	font-family: $px-heading-font-family;
+	font-family: $px-font-family;
 	&.fixed-header {
 		background: $px-white;
 		box-shadow: 0px 3px 10px 0px rgba(38, 59, 94, 0.1);
