--- a/static/style/master.css
+++ b/static/style/master.css
@@ -4287,3 +4287,10 @@ h6 {
   @media (min-width: 576px) {
     #huemail_project_overview {
       background-image: url("../img/huemail_bg.png"); } }
+
+#openpo_project_overview {
+  background-image: url("../img/openpo_bg_sm.png");
+  background-size: cover; }
+  @media (min-width: 576px) {
+    #openpo_project_overview {
+      background-image: url("../img/openpo_bg.png"); } }
